GUVNOR-474 : In test scenarios - Cleaning the codes while searching the bug